Added new dto for get endpoint
