# backend/openapi/UKPS.Api.json
@@ -1277,17 +1277,17 @@
             "content": {
               "text/plain": {
                 "schema": {
-                  "$ref": "#/components/schemas/RegisterUserDetailsDto"
+                  "$ref": "#/components/schemas/RegisterUserConfirmationDto"
                 }
               },
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/RegisterUserDetailsDto"
+                  "$ref": "#/components/schemas/RegisterUserConfirmationDto"
                 }
               },
               "text/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/RegisterUserDetailsDto"
+                  "$ref": "#/components/schemas/RegisterUserConfirmationDto"
                 }
               }
             }
@@ -1321,17 +1321,17 @@
             "content": {
               "text/plain": {
                 "schema": {
-                  "$ref": "#/components/schemas/RegisterUserDetailsDto"
+                  "$ref": "#/components/schemas/RegisterUserConfirmationDto"
                 }
               },
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/RegisterUserDetailsDto"
+                  "$ref": "#/components/schemas/RegisterUserConfirmationDto"
                 }
               },
               "text/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/RegisterUserDetailsDto"
+                  "$ref": "#/components/schemas/RegisterUserConfirmationDto"
                 }
               }
             }
@@ -1878,14 +1878,19 @@
           }
         }
       },
-      "RegisterUserDetailsDto": {
+      "RegisterUserConfirmationDto": {
         "required": [
+          "organisation",
           "fullName",
           "workEmail",
           "phoneNumber"
         ],
         "type": "object",
         "properties": {
+          "organisation": {
+            "type": "string",
+            "description": "Gets the user's organisation."
+          },
           "fullName": {
             "type": "string",
             "description": "Gets the user's full name."
